Renamed background customizer

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -289,9 +289,9 @@
   <string id="31257">Details</string>
   <string id="31258">Overview</string>
   <string id="31259">Press RIGHT to see trailer</string>
-  <string id="31260">Detach Timepanel from Main Menu</string>
-  <string id="31261">Detach Library Stats from Main Menu</string>
-  <string id="31262">Detach RSS Feed from Main Menu</string>
+  <string id="31260">-</string>
+  <string id="31261">-</string>
+  <string id="31262">-</string>
   <string id="31263">Enable Animated Backgrounds</string>
   <string id="31264">Enable Background Effect on Panels[I](Can increase CPU usage!)   [/I]</string>
   <string id="31265">Smaller Pop-up Dialogs</string>
