--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]1.5.3[/B]
+- Fixed: episode label not visible when the infopanel is deactivated on TV Show level.
+
 [B]1.5.2[/B]
 - Added option to show episode thumb in Landscape view.
 - Fixed logo in LowList seasons view.
