- Added Russian language string - thx Heckfy - Added hungarian language string - thx frodo19

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,8 @@
 [B]1.5.4[/B]
 - Fixed Networksetup.
 - Fixed numeric dialog pop up when enering master lock settings.
+- Added Russian language string - thx Heckfy
+- Added hungarian language string - thx frodo19
 
 [B]1.5.3[/B]
 - Fixed: episode label not visible when the infopanel is deactivated on TV Show level.
