--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+[B]1.6.0[/B]
+- Added missing option to enable Music extrafanart (depended on "Path to Music Library").
+- New seekbar.
+- New LowList layout.
+
 [B]1.5.4[/B]
 - Fixed Networksetup.
 - Fixed numeric dialog pop up when enering master lock settings.
