Next aired script now fallsback to "Ended" instead of info unavailable

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -344,6 +344,7 @@
   <string id="31378">Set Path to Music Library</string>
   <string id="31379">- Only on Home window</string>
   <string id="31395">Enable extrafanart in Music library</string>
+  <string id="31397">Ended</string>
 
   <!-- Home Menu -->
   <string id="31500">PICTURES</string>
