--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,8 @@
 - New LowList layout.
 - New PseudoTV layout.
 - Added watched overlay to Posters view.
+- Scripts only run on startup if applicable.
+- Recently added runs on exit videoscan and musicscan.
 
 [B]1.5.4[/B]
 - Fixed Networksetup.
