--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 - Added watched overlay to Posters view.
 - Scripts only run on startup if applicable.
 - Recently added runs on exit videoscan and musicscan.
+- Added trailer label to Random/Latest Poster widget and Latest Movie widget.
 
 [B]1.5.4[/B]
 - Fixed Networksetup.
