--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -343,6 +343,7 @@
   <string id="31377">CDArt</string>
   <string id="31378">Set Path to Music Library</string>
   <string id="31379">- Only on Home window</string>
+  <string id="31394">Press DOWN to see trailer</string>
   <string id="31395">Enable extrafanart in Music library</string>
   <string id="31397">Ended</string>
 
