Work on home window customizer

--- a/language/French/strings.xml
+++ b/language/French/strings.xml
@@ -278,9 +278,9 @@
   <string id="31246">Voir le Résumé Court</string>
   <string id="31247">Afficher Genre</string>
   <string id="31248">Boîtier BR/DVD</string>
-  <string id="31249">Utilisez la barre classique d'Aeon pour le menu d'accueil</string>
+  <string id="31249">Classique</string>
   <string id="31250">- Transparence</string>
-  <string id="31251">Utilisez le menu Style Verre de la barre d'accueil</string>
+  <string id="31251">Verre</string>
   <string id="31252">Ajouter un favoris au sous-menu Films</string>
   <string id="31253">Ajouter un favoris au sous-menu Musiques</string>
   <string id="31254">Ajouter un favoris au sous-menu Séries TV</string>
