--- a/language/Spanish/strings.xml
+++ b/language/Spanish/strings.xml
@@ -278,9 +278,9 @@
   <string id="31246">Mostrar Trama Resumida</string>
   <string id="31247">Mostrar Genero</string>
   <string id="31248">Cajas BD/DVD</string>
-  <string id="31249">Usar Barra de Menu Aeon Clasica</string>
+  <string id="31249">Clasica</string>
   <string id="31250">- Transparente</string>
-  <string id="31251">Usar Estilo Vidrio en la barra del Menu Principal</string>
+  <string id="31251">Vidrio</string>
   <string id="31252">Añadir Favoritos al Submenu Peliculas</string>
   <string id="31253">Añadir Favoritos al Submenu Musica</string>
   <string id="31254">Añadir Favoritos al Submenu Series TV</string>
