--- a/language/Hungarian/strings.xml
+++ b/language/Hungarian/strings.xml
@@ -279,9 +279,9 @@
 	<string id="31246">Tartalom mutatása túlírva</string>
 	<string id="31247">Műfaj mutatása</string>
 	<string id="31248">BD/DVD Borítók</string>
-	<string id="31249">Klasszikus Aeon Home Menu Háttér használata</string>
+	<string id="31249">Klasszikus</string>
 	<string id="31250">- Átlátszó</string>
-	<string id="31251">Átlátszó Home Menu Háttér használata</string>
+	<string id="31251">Átlátszó</string>
 	<string id="31252">Kedvencek hozzáadása a Filmek almenühöz</string>
 	<string id="31253">Kedvencek hozzáadása a Zene almenühöz</string>
 	<string id="31254">Kedvencek hozzáadása a TV Shows almenühöz </string>
