--- a/language/Russian/strings.xml
+++ b/language/Russian/strings.xml
@@ -279,9 +279,9 @@
   <string id="31246">Show Plot Outline</string>
   <string id="31247">Показать Жанр</string>
   <string id="31248">BD/DVD пачки</string>
-  <string id="31249">Use Classic Aeon Home Menu Bar</string>
+  <string id="31249">Classic</string>
   <string id="31250">- Transparent</string>
-  <string id="31251">Use Glass Style Home Menu Bar</string>
+  <string id="31251">Glass</string>
   <string id="31252">Add Favorite to Movies Submenu</string>
   <string id="31253">Add Favorite to Music Submenu</string>
   <string id="31254">Add Favorite to TV Shows Submenu</string>
