--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -318,7 +318,7 @@
   <string id="31286">Enable CDArt in List View (only on song level)</string>
   <string id="31287">4 Thumbs</string>
   <string id="31288">Disable Trailer Label</string>
-  <string id="31289">Wider Menu Items</string>
+  <string id="31289">Wider</string>
   <string id="31290">TV Schedule</string>
   <string id="31291">BigFan</string>
   <string id="31292">Enable Animated Weather Icons</string>
@@ -346,6 +346,7 @@
   <string id="31394">Press DOWN to see trailer</string>
   <string id="31397">Ended</string>
   <string id="31398">Style</string>
+  <string id="31399">Spacing</string>
 
   <!-- Home Menu -->
   <string id="31500">PICTURES</string>
