--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,13 @@
 - Removed classic/glass style options in Home Window options.
 - Added menu-item "Style" to Home window customizer screen to toggle main menu bar style.
 - Moved option "Wider Menu Items" to "Styles" menu in Home window customizer.
+- Media Menu is now on the left side of the screen (navigation unchanged).
+- Added support for extrafanart in videolibrary (place in root of movie or tv show folder in folder called "extrafanart")
+
+- Added color selector for the showcase spot.
+
+- Added color selector for the topbar.
+
 
 [B]1.5.4[/B]
 - Fixed Networksetup.
