--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -353,6 +353,7 @@
   <string id="31389">Set topbar color</string>
   <string id="31394">Press DOWN to see trailer</string>
   <string id="31395">Enable extrafanart</string>
+  <string id="31396">BannerList</string>
   <string id="31397">Ended</string>
   <string id="31398">Style</string>
   <string id="31399">Spacing</string>
