Added tvguide to main menu.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -319,7 +319,7 @@
   <string id="31287">4 Thumbs</string>
   <string id="31288">Disable Trailer Label</string>
   <string id="31289">Wider</string>
-  <string id="31290">TV Schedule</string>
+  <string id="31290">TV Guide</string>
   <string id="31291">BigFan</string>
   <string id="31292">Enable Animated Weather Icons</string>
   <string id="31293">Square</string>
