Rework of shutdown menu

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -359,6 +359,7 @@
   <string id="31399">Spacing</string>
   <string id="31426">Full</string>
   <string id="31427">Outline</string>
+  <string id="31428">SHUTDOWN IN</string>
 
   <!-- Home Menu -->
   <string id="31500">PICTURES</string>
