Added theme lite_floor

--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@
 - Added color selector for the topbar.
 
 - Disabling PosterSlide now enables Multiplex layout.
+- Added theme Lite_Floor.
 
 [B]1.5.4[/B]
 - Fixed Networksetup.
