--- a/changelog.txt
+++ b/changelog.txt
@@ -13,11 +13,8 @@
 - Moved option "Wider Menu Items" to "Styles" menu in Home window customizer.
 - Media Menu is now on the left side of the screen (navigation unchanged).
 - Added support for extrafanart in videolibrary (place in root of movie or tv show folder in folder called "extrafanart")
-
 - Added color selector for the showcase spot.
-
 - Added color selector for the topbar.
-
 - Disabling PosterSlide now enables Multiplex layout.
 - Added theme Lite_Floor.
 
@@ -35,7 +32,7 @@
 - Added option to show episode thumb in Landscape view.
 - Fixed logo in LowList seasons view.
 - Fixed "Get Tunes" label.
-- Removed OSD settings form General settings menu (all are available in "Misc options" in Music OSD).
+- Removed OSD settings from General settings menu (all are available in "Misc options" in Music OSD).
 - Added fullscreen video for the setting windows.
 - Renamed Background customizer to Home window customizer and added options to toggle main menu and timepanel/rss/totals.
 - Fanart now scales instead of stretches.
