--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -213,7 +213,7 @@
   <string id="31170">Lower List</string>
   <string id="31171">TV Logo Script</string>
   <string id="31318">Small</string>
-  <string id="31172">Show Extra Info</string>
+  <string id="31172">Extra Info</string>
   <string id="31173">Get Logo</string>
   <string id="31174">Enable TvTunes</string>
   <string id="31175">Add Video Playlist Button to Movies Submenu</string>
