--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -38,6 +38,7 @@
   <string id="31049">End Time</string>
   <string id="31050">Previous</string>
   <string id="31051">Next</string>
+  <string id="31052">REMAINING</string>
 
   <!-- Playlist Editor labels -->
   <string id="31055">Open playlist</string>
