--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -259,8 +259,8 @@
   <string id="31225">Audio/Sub</string>
   <string id="31226">Hide Flags</string>
   <string id="31227">- Use Vinyl Record as Default in CDArt</string>
-  <string id="31228">Vertical</string>
-  <string id="31229">Horizontal</string>
+  <string id="31228">Navigation: [B]Vertical[/B]</string>
+  <string id="31229">Navigation: [B]Horizontal[/B]</string>
   <string id="31230">Viewtypes</string>
   <string id="31231">BannerWall</string>
   <string id="31233">Panel</string>
@@ -307,8 +307,8 @@
   <string id="31274">Please Choose a Layout in the Media Menu [CR] (Press Up to Activate Media Menu)</string>
   <string id="31275">Enable Weather Backgrounds Based on Current Conditions</string>
   <string id="31276">Use Smaller Now Playing Widget</string>
-  <string id="31277">Wrap List</string>
-  <string id="31278">Fixed List</string>
+  <string id="31277">Navigation: [B]Wrap List[/B]</string>
+  <string id="31278">Navigation: [B]Fixed List[/B]</string>
   <string id="31279">Play Trailers in Fullscreen in all Views</string>
   <string id="31280">Mediaflags</string>
   <string id="31281">Show Video Info when Player is Paused</string>
