--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -234,8 +234,8 @@
   <string id="31189">Previous Episode</string>
   <string id="31190">Next Episode</string>
   <string id="31191">Darker Fanart</string>
-  <string id="31192">Icon: [B]TV Show Thumb[/B]</string>
-  <string id="31193">Icon: [B]TV Show Logo[/B]</string>
+  <string id="31192">Icon: [B]TV Show thumb[/B]</string>
+  <string id="31193">Icon: [B]TV Show logo[/B]</string>
   <string id="31194">Set Focus Offset of Main Menu (range from -2 to 14)</string>
   <string id="31195">Add Favourite to Home Menu</string>
   <string id="31196">Favourite Path</string>
