--- a/language/Dutch/strings.xml
+++ b/language/Dutch/strings.xml
@@ -165,7 +165,7 @@
   <string id="31223">- Laat nieuwste speelfilm posters widget zien</string>
   <string id="31224">- Laat willekeurige speelfilm posters widget zien</string>
   <string id="31225">Audio/Ondertiteling</string>
-  <string id="31226">Icoonen verbergen</string>
+  <string id="31226">Iconen verbergen</string>
   <string id="31227">- Gebruik Vinyl Plaat als standaard in CDArt</string>
   <string id="31228">Navigatie: [B]Vertikaal[/B]</string>
   <string id="31229">Navigatie: [B]Horizontaal[/B]</string>
