--- a/changelog.txt
+++ b/changelog.txt
@@ -24,6 +24,7 @@
 - Added Dutch language - thx Machine-Sanctum
 - Updated Hungarian language - thx frodo19
 - Updated French language - thx Rififi77
+- Added support for random movie script (if installed there is a new sub menu item "Random" under Movies)
 
 [B]1.5.4[/B]
 - Fixed Networksetup.
