--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@
 - When TV Show Logo are active icons in Landscape view, TV Show title is replaced with watchcount.
 - Show "New" status option only enabled if recently added items are enabled.
 - Wall view selectable again in videofiles section.
+- Fixed no background in Music files mode.
 
 [B]1.6.0[/B]
 - New seekbar.
