--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -345,6 +345,7 @@
   <string id="31377">CDArt</string>
   <string id="31378">Set Path to Music Library</string>
   <string id="31379">- Only on Home window</string>
+  <string id="31380">Stripshow</string>
   <string id="31383">Backdrop</string>
   <string id="31384">Curtain</string>
   <string id="31385">Off/Trigger</string>
