More fixes for linked movies

--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,9 @@
 - Fixed no background in Music files mode.
 - Fixed: missing dolby digital plus codec flag.
 - Fixed: Linked tv show movies now show correct metadata in season and episode level.
+- Updated audio flags.
+- Fixed missing songs info in InfoWall.
+- Updated Dutch languages strings - thx Machine-Sanctum
 
 [B]1.6.0[/B]
 - New seekbar.
