--- a/language/Dutch/strings.xml
+++ b/language/Dutch/strings.xml
@@ -297,6 +297,7 @@
   <string id="31377">CDArt</string>
   <string id="31378">Stel lokatie van Muziek bibliotheek in</string>
   <string id="31379">- Alleen op Begin scherm</string>
+  <string id="31380">Stripweergave</string>
   <string id="31383">Achtergrond</string>
   <string id="31384">Gordijn</string>
   <string id="31385">Uit/Op aanvraag</string>
