--- a/language/Dutch/strings.xml
+++ b/language/Dutch/strings.xml
@@ -116,8 +116,8 @@
   <string id="31174">Zet TvTunes aan</string>
   <string id="31175">Hoofdmenu Speelfilms submenu</string>
   <string id="31176">Zet slimme afspeellijst knop aan</string>
-  <string id="31177">Voeg muziek speellijst knop toe aan Muziek submenu</string>
-  <string id="31178">Voeg muziek speellijst knop toe aan TV-Series submenu</string>
+  <string id="31177">Hoofdmenu Muziek submenu</string>
+  <string id="31178">Hoofdmenu TV-Series submenu</string>
   <string id="31179">Zet Kiosk Modus aan (schakelt media menu uit)</string>
   <string id="31180">Zet alternative Kiosk Modus aan (verbergt opties in media menu)</string>
   <string id="31181">Voeg slimme afspeellijst aan hoofdmenu toe</string>
