--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-[B]1.6.1[/B]
+[B]1.7.0[/B]
 - Hungarian language updated - thx frodo19
 - Fixed scrolling MPAA Rating label in LowList "show info" mode.
 - Fixed "New" flag in Stripshow episode view.
@@ -12,9 +12,9 @@
 - Fixed: missing dolby digital plus codec flag.
 - Fixed: Linked tv show movies now show correct metadata in season and episode level.
 - Updated audio flags.
-- Fixed missing songs info in InfoWall.
 - Updated Dutch languages strings - thx Machine-Sanctum
 - Fixed: Uppercase labels with glyphs were forced lowercase (e.g. DJ TIÎSTO instead of DJ TIÀSTO)- Playlist widget now shows instead of Recent/Random widgets when playing music on Home window. Widgets are still accessible.
+- New InfoWall layout + added banner style for tv shows.
 
 [B]1.6.0[/B]
 - New seekbar.
