--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,7 @@
 - Fixed: missing dolby digital plus codec flag.
 - Fixed: Linked tv show movies now show correct metadata in season and episode level.
 - Updated audio flags.
+- New aspect ratio flags.
 - Updated Dutch languages strings - thx Machine-Sanctum
 - Fixed: Uppercase labels with glyphs were forced lowercase (e.g. DJ TIÎSTO instead of DJ TIÀSTO)- Playlist widget now shows instead of Recent/Random widgets when playing music on Home window. Widgets are still accessible.
 - New InfoWall layout + added banner style for tv shows.
