--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,7 @@
 - Updated Dutch languages strings - thx Machine-Sanctum
 - Fixed: Uppercase labels with glyphs were forced lowercase (e.g. DJ TIÎSTO instead of DJ TIÀSTO)- Playlist widget now shows instead of Recent/Random widgets when playing music on Home window. Widgets are still accessible.
 - New InfoWall layout + added banner style for tv shows.
+- Restored ClearART in pause osd.
 
 [B]1.6.0[/B]
 - New seekbar.
